--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
@@ -41,8 +41,8 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content style="text-align: left;">
-            <p style="margin-bottom: 2em;"><strong>Fecha de solicitud:</strong> {{ addressForm.get( 'fechaSolicitud' ).value | date: 'dd/MM/yyyy' }} </p>
-            <p style="margin-top: 2em;"><strong style="font-size: 16px;">Número de radicado SAC:</strong> {{ addressForm.get( 'numeroRadicado' ).value }} </p>
+            <p><strong>Fecha de solicitud:</strong> {{ addressForm.get( 'fechaSolicitud' ).value | date: 'dd/MM/yyyy' }} </p>
+            <p><strong>Número de radicado SAC:</strong> {{ addressForm.get( 'numeroRadicado' ).value }} </p>
         </mat-card-content>
       </mat-card>
     </form>
