--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
@@ -171,7 +171,7 @@
                   <mat-expansion-panel class="expansion-style">
                     <mat-expansion-panel-header class="expansion-style--header">
                       <mat-panel-title class="expansion-style--title">
-                        Descripción de la factura
+                        Datos de la factura
                       </mat-panel-title>
                     </mat-expansion-panel-header>
         
