--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
@@ -4,7 +4,7 @@
             <mat-expansion-panel class="expansion-style sub-expansion">
                 <mat-expansion-panel-header class="expansion-style--header">
                     <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforoFase">
-                        Detalle factura - {{ proyecto.get( 'llaveMen' ).value }}
+                        Datos de la factura - {{ proyecto.get( 'llaveMen' ).value }}
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
