--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
@@ -1,3 +1,12 @@
+<div class="d-flex justify-content-center" *ngIf="montoMaximoPendiente !== undefined">
+  <div>
+    <p> <b> Monto máximo por pagar en esta factura: </b> {{ montoMaximoPendiente.montoMaximo | currency: '':'symbol-naroow':'0.0-0' }} </p>
+  </div>
+  <div>
+    <p> <b> Monto pendiente por pagar en la fase: </b> {{ montoMaximoPendiente.valorPendientePorPagar | currency: '':'symbol-naroow':'0.0-0' }} </p>
+  </div>
+</div>
+
 <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
   <div class="d-flex justify-content-center" *ngIf="criteriosSeleccionadosArray.length > 0">
     <strong>Criterios de pago:</strong>
