--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-detll-fact-proc-asociados/obs-detll-fact-proc-asociados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-detll-fact-proc-asociados/obs-detll-fact-proc-asociados.component.html
@@ -78,19 +78,28 @@
                     <div class="d-flex">
                         <strong>Criterio:</strong>
                         <section>
-                            <p *ngFor="let criterio of criteriosArraySeleccionados; index as i"
-                                style="margin-left: .4em;"> {{ filterCriterios( criterio.codigo ) }}<span
-                                    *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span
-                                    *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
+                            <p *ngFor="let criterio of criteriosArraySeleccionados; index as i">
+                                {{ filterCriterios( criterio.codigo ) }}
+                                <span
+                                    *ngIf="criteriosArraySeleccionados.length - 1 !== i">
+                                    ,
+                                </span>
+                                <span
+                                    *ngIf="criteriosArraySeleccionados.length - 1 === i">
+                                    .
+                                </span>
+                            </p>
                         </section>
                     </div>
                     <br>
                     <div *ngFor="let criterio of solicitudPagoFaseCriterio">
-                        <div style="font-size: 16px;">
+                        <div>
                             <b> {{ filterCriterios( criterio.tipoCriterioCodigo ) }} </b>
                         </div>
-                        <p><strong>Valor facturado para el proyecto en el criterio:</strong> ${{ criterio.valorFacturado
-                            | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                        <p>
+                            <strong>Valor facturado para el proyecto en el criterio:</strong> 
+                            ${{ criterio.valorFacturado | currency:' ':'symbol-narrow':'.0-0' }}
+                        </p>
                         <br>
                     </div>
                 </mat-card-content>
