--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/descripcion-factura/descripcion-factura.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/descripcion-factura/descripcion-factura.component.html
@@ -6,10 +6,10 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content style="text-align: left;">
-            <p style="margin-bottom: 2em;" *ngIf="addressForm.get( 'esFactura' ).value === true"><strong>Tipo de documento:</strong> Factura </p>
-            <p style="margin-bottom: 2em;" *ngIf="addressForm.get( 'esFactura' ).value === false"><strong>Tipo de documento:</strong> Cuenta de cobro </p>
-            <p style="margin-top: 2em;"><strong style="font-size: 16px;">Número de documento:</strong> {{ addressForm.get( 'numeroDocumento' ).value }} </p>
-            <p style="margin-top: 2em;"><strong style="font-size: 16px;">Fecha de documento:</strong> {{ addressForm.get( 'fechaDocumento' ).value | date: 'dd/MM/yyyy' }} </p>
+            <p *ngIf="addressForm.get( 'esFactura' ).value === true"><strong>Tipo de documento:</strong> Factura </p>
+            <p *ngIf="addressForm.get( 'esFactura' ).value === false"><strong>Tipo de documento:</strong> Cuenta de cobro </p>
+            <p><strong>Número de documento:</strong> {{ addressForm.get( 'numeroDocumento' ).value }} </p>
+            <p><strong>Fecha de documento:</strong> {{ addressForm.get( 'fechaDocumento' ).value | date: 'dd/MM/yyyy' }} </p>
         </mat-card-content>
     </mat-card>
 </form>
