--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-detllfact-procasoc-autoriz/obs-detllfact-procasoc-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-detllfact-procasoc-autoriz/obs-detllfact-procasoc-autoriz.component.html
@@ -86,11 +86,13 @@
                     </div>
                     <br>
                     <div *ngFor="let criterio of solicitudPagoFaseCriterio">
-                        <div style="font-size: 16px;">
+                        <div>
                             <b> {{ filterCriterios( criterio.tipoCriterioCodigo ) }} </b>
                         </div>
-                        <p><strong>Valor facturado para el proyecto en el criterio:</strong> ${{ criterio.valorFacturado
-                            | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                        <p>
+                            <strong>Valor facturado para el proyecto en el criterio:</strong>
+                            ${{ criterio.valorFacturado | currency:' ':'symbol-narrow':'.0-0' }}
+                        </p>
                         <br>
                     </div>
                 </mat-card-content>
