--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.html
@@ -4,7 +4,7 @@
       <img src="assets/img/icon/regresar.svg" alt="Regresar" />
     </a>
   </div>
-  <h1 class="title-menu--h1">Validación presupuestal solicitud {{ detailavailabilityBudget?.numeroSolicitud }}</h1>
+  <h1 class="title-menu--h1">{{ esRechazada === true ? 'Rechazada por' : '' }} Validación presupuestal solicitud {{ detailavailabilityBudget?.numeroSolicitud }}</h1>
   <p class="info-sub-title">
     <span
       >Fecha de la solicitud: <b> {{ detailavailabilityBudget?.fechaSolicitud | date: 'dd/MM/yyyy' }}</b></span
@@ -18,7 +18,7 @@
   <mat-card class="shipping-card var-main-gris">
     <mat-card-content>
       <p *ngIf="detailavailabilityBudget?.numeroDDP">
-        <strong>Número DDP:</strong>
+        <strong>Número DDP <span *ngIf="esNovedad">contrato</span>:</strong>
         {{ detailavailabilityBudget?.numeroDDP }}
       </p>
       <p>
@@ -173,7 +173,7 @@
     </mat-card-content>
   </mat-card>
 
-  <div class="botones">
+  <div class="botones" *ngIf="!esRechazada">
     <button mat-raised-button color="accent" (click)="download()" *ngIf="detailavailabilityBudget?.numeroDDP">
       Descargar DDP
     </button>
