--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/plantilla/plantilla.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/plantilla/plantilla.component.html
@@ -1,4 +1,4 @@
-<div style="font-family: Arial; width: max-content">
+<div style="font-family: Arial; width: max-content" *ngIf="solicitudPago !== undefined">
     <h1 style="text-align: center; font-size: 20px; font-weight: 700">
       ALIANZA FIDUCIARIA S.A. FORMATO DE ORDEN DE GIRO - TRANSACCIONES
       ELECTRÓNICAS
@@ -52,18 +52,16 @@
         </table>
       </div>
       <div style="float: right">
-        <div
-          style="
-            border: solid 1px #000;
-            font-weight: 700;
-            color: #ff0000;
-            height: 72px;
-            padding: 0 10px;
-            display: flex;
-            align-items: center;
-          "
-        >
-          Obra/Interventoría/Expensas/Otros Costos
+        <div  style="border: solid 1px #000; font-weight: 700; color: #ff0000; height: 72px; padding: 0 10px; display: flex;align-items: center; width: 10rem; justify-content: center;">
+          <span [ngSwitch]="solicitudPago.tipoSolicitudCodigo">
+          <p *ngSwitchCase="tipoSolicitudCodigo.obra"> Obra </p>
+          <p *ngSwitchCase="tipoSolicitudCodigo.interventoria"> Interventoría </p>
+          <p *ngSwitchCase="tipoSolicitudCodigo.expensas"> Expensas </p>
+          <p *ngSwitchCase="tipoSolicitudCodigo.otrosCostos"> Otros Costos </p>
+          <p *ngSwitchDefault>
+            No posee un tipo de solicitud valido
+          </p>
+          </span>
         </div>
       </div>
     </section>
@@ -119,9 +117,10 @@
             >
               PROYECTO
             </td>
-            <td style="border: solid 1px #000;" colspan="2"></td>
+            <td style="border: solid 1px #000;" colspan="2">
+            </td>
             <td style="border: solid 1px #000;" colspan="3" rowspan="2">
-              aaaaaaaaa
+              {{ solicitudPago.ordenGiro.fechaCreacion | date:'dd/MM/yyyy' }}
             </td>
           </tr>
           <tr>
@@ -136,7 +135,11 @@
             >
               LLAVE MEN
             </td>
-            <td style="border: solid 1px #000;" colspan="2">LLAVE MEN</td>
+            <td style="border: solid 1px #000;" colspan="2">
+              <div *ngFor="let contratacionProyecto of solicitudPago.contratoSon.contratacion.contratacionProyecto">
+                <p> {{ contratacionProyecto.proyecto.llaveMen }} </p>
+              </div>
+            </td>
           </tr>
           <tr>
             <td
@@ -150,8 +153,8 @@
             >
               ORDEN DE SERVICIO / CONTRATO
             </td>
-            <td style="border: solid 1px #000;">Número de Contrato</td>
-            <td style="border: solid 1px #000;"></td>
+            <td style="border: solid 1px #000;"> {{ solicitudPago.contratoSon.numeroContrato }} </td>
+            <td style="border: solid 1px #000;"> </td>
             <td style="border: solid 1px #000;" colspan="3" rowspan="2">
               Aportanes (FFIE-ETC)
             </td>
@@ -168,7 +171,7 @@
             >
               N° ORDEN DE GIRO FFIE
             </td>
-            <td style="border: solid 1px #000;" colspan="2">10122</td>
+            <td style="border: solid 1px #000;" colspan="2"> {{ solicitudPago.ordenGiro.numeroSolicitud }} </td>
           </tr>
         </tbody>
       </table>
@@ -454,7 +457,7 @@
             </td>
           </tr>
           <tr>
-            <td style="border: solid 1px #000;">Consecutivo asignado</td>
+            <td style="border: solid 1px #000;"> {{ solicitudPago.ordenGiro?.consecutivoOrigen }} </td>
             <td style="border: solid 1px #000;" colspan="7">
               Información de Origen
             </td>
@@ -477,35 +480,56 @@
             </td>
           </tr>
           <tr>
-            <td style="border: solid 1px #000; height: 21px;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
+            <div>
+              <td style="border: solid 1px #000; height: 21px;"></td>
+              <td style="border: solid 1px #000;" *ngIf="aportantes.length > 0">
+                <div *ngFor="let aportante of aportantes.controls"> {{ firstLetterUpperCase( aportante.get( 'cuentaBancariaId' ).value.nombreCuentaBanco ) }} </div>
+              </td>
+              <td style="border: solid 1px #000;" *ngIf="aportantes.length > 0">
+                <div *ngFor="let aportante of aportantes.controls">
+                  {{ aportante.get( 'cuentaBancariaId' ).value.numeroCuentaBanco }}
+                </div>
+              </td>
+              <td style="border: solid 1px #000;" *ngIf="aportantes.length > 0">
+                <div *ngFor="let aportante of aportantes.controls">
+                  {{ firstLetterUpperCase( getBanco( aportante.get( 'cuentaBancariaId' ).value.bancoCodigo ) ) }}
+                </div>
+              </td>
+              <td style="border: solid 1px #000;" *ngIf="aportantes.length > 0">
+                <div *ngFor="let aportante of aportantes.controls">
+                  {{ aportante.get( 'cuentaBancariaId' ).value.tipoCuentaCodigo }}
+                </div>
+              </td>
+              <td style="border: solid 1px #000;" *ngIf="aportantes.length > 0">
+                <div *ngFor="let aportante of aportantes.controls">
+                  {{ aportante.get( 'cuentaBancariaId' ).value.codigoSifi }}
+                </div>
+              </td>
+              <td style="border: solid 1px #000;"> {{ solicitudPago.contratoSon.contratacion.contratista.numeroIdentificacion }} </td>
+              <td style="border: solid 1px #000;"> {{ solicitudPago.contratoSon.contratacion.contratista.nombre }} </td>
+              <td style="border: solid 1px #000;"> {{ solicitudPago.solicitudPagoFactura[ 0 ].numero }} </td>
+              <td style="border: solid 1px #000;">  </td>
+              <td style="border: solid 1px #000;">  </td>
+              <td style="border: solid 1px #000;">  </td>
+              <td style="border: solid 1px #000;">  </td>
+              <td style="border: solid 1px #000;">  </td>
+              <td style="border: solid 1px #000;">  </td>
+              <td style="border: solid 1px #000;">  </td>
+              <td style="border: solid 1px #000;">  </td>
+              <td style="border: solid 1px #000;">  </td>
+              <td style="border: solid 1px #000;">  </td>
+              <td style="border: solid 1px #000;">  </td>
+              <td style="border: solid 1px #000;">  </td>
+            </div>
           </tr>
+          <!--
           <tr>
             <td style="border: solid 1px #000; height: 21px;"></td>
             <td style="border: solid 1px #000;"></td>
             <td style="border: solid 1px #000;"></td>
             <td style="border: solid 1px #000;"></td>
             <td style="border: solid 1px #000;"></td>
-            <td style="border: solid 1px #000;"></td>
+            <td style="border: solid 1px #000;">  </td>
             <td style="border: solid 1px #000;"></td>
             <td style="border: solid 1px #000;"></td>
             <td style="border: solid 1px #000;"></td>
@@ -522,6 +546,7 @@
             <td style="border: solid 1px #000;"></td>
             <td style="border: solid 1px #000;"></td>
           </tr>
+          -->
           <tr>
             <td style="border: solid 1px #000;" colspan="10">
               FIRMAS AUTORIZADAS
