--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -91,7 +91,7 @@
                               (ngModelChange)="seRealizoCambio = true">
                   </mat-form-field>
                   <span style="margin: .5em;">%</span>
-                  <span class="contador">{{3 - textoLimpio( programacionCapitulo.programacionCapitulo ) }}</span>
+                  <span class="contador" *ngIf="programacionCapitulo.programacionCapitulo">{{3 - textoLimpio( programacionCapitulo.programacionCapitulo ) }}</span>
                   </div>
                 </td>
             </ng-container>
@@ -115,7 +115,7 @@
                                   (ngModelChange)="valuePending( $event, avanceFisicoCapitulo )">
                       </mat-form-field>
                       <span style="margin: .5em;">%</span>
-                      <span class="contador">{{3 - textoLimpio( avanceFisicoCapitulo.avanceFisicoCapitulo ) }}</span>
+                      <span class="contador" *ngIf="avanceFisicoCapitulo.avanceFisicoCapitulo">{{3 - textoLimpio( avanceFisicoCapitulo.avanceFisicoCapitulo ) }}</span>
                   </section>
                   </div>
                 </td>
