--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-validar-avance-semanal/tabla-validar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-validar-avance-semanal/tabla-validar-avance-semanal.component.html
@@ -12,7 +12,7 @@
     <table mat-table [dataSource]="tablaRegistro" matSort>
 
         <ng-container matColumnDef="semanaReporte">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Semana número </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Semana número ds </th>
             <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.numeroSemana }} - {{ element.cantidadSemanas }} </b> </td>
         </ng-container>
 
