--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/recursos-comprom-pagados-gbftrec/recursos-comprom-pagados-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/recursos-comprom-pagados-gbftrec/recursos-comprom-pagados-gbftrec.component.html
@@ -1,3 +1,7 @@
+<p *ngIf="!tieneOrdenGiro">
+    No tiene ordenes de giro tramitadas
+</p>
+  
 <mat-accordion>
     <mat-expansion-panel class="expansion-style" *ngIf="contratoObra !== undefined">
         <mat-expansion-panel-header class="expansion-style--header">
