--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actua-tramite-cc/control-y-tabla-actua-tramite-cc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actua-tramite-cc/control-y-tabla-actua-tramite-cc.component.html
@@ -39,27 +39,27 @@
             <ng-container matColumnDef="estadoActuacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la actuación </th>
                 <td mat-cell *matCellDef="let element" align="center">
-                    <div *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir'">En
+                    <div *ngIf="element.estadoActuacionCodigo=='sin definir'">En
                         proceso de registro</div>
-                    <div *ngIf="element.estadoActuacionCodigo=='2'">Finalizada</div>
-                    <div *ngIf="element.estadoActuacionCodigo=='3'">Enviada a comité técnico</div>
+                    <div *ngIf="element.estadoActuacionCodigo!='sin definir'">{{ element?.estadoActuacion }}</div>
                 </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 16%;"> Gestión </th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo' && element.requiereComite==false"
-                        (click)="this.enviarComiteTecnicoTramAct(element.actuacionId,element.requiereComite)">
+                        *ngIf="((element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo' && element.requiereComite==false)
+                              || ((element.estadoActuacionCodigo == '5') && element.registroCompletoActuacion=='Completo' && element.requiereComite==true)"
+                        (click)="this.enviarComiteTecnicoTramAct(element.actuacionId,true)">
                         Finalizar actuación
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
                         *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo'  && element.requiereComite==true"
-                        (click)="this.enviarComiteTecnicoTramAct(element.actuacionId,element.requiereComite)">
+                        (click)="this.enviarComiteTecnicoTramAct(element.actuacionId,false)">
                         Enviar a comité técnico
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir'"
+                        *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo =='sin definir' || element.estadoActuacionCodigo == '6' || element.estadoActuacionCodigo == '7' || element.estadoActuacionCodigo == '8' || element.estadoActuacionCodigo == '9'"
                         (click)="this.verDetalleEditarActuacion(element.actuacionId)">
                         Ver detalle/Editar
                     </button>
@@ -69,7 +69,8 @@
                         Eliminar
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActuacionCodigo=='2' || (element.estadoActuacionCodigo=='3' && element.registroCompletoActuacion=='Completo' && element.requiereComite==true)"
+                        *ngIf="(element.estadoActuacionCodigo != '1' && element.estadoActuacionCodigo != '6' && element.estadoActuacionCodigo != '7'&& element.estadoActuacionCodigo != '8' && element.estadoActuacionCodigo != '9') ||
+                         (element.estadoActuacionCodigo=='3' && element.registroCompletoActuacion == 'Completo' && element.requiereComite==true)"
                         (click)="this.verDetalleActuacion(element.actuacionId)">
                         Ver detalle
                     </button>
