Fase del proyecto

--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/detalle-soli-pago-autoriz/detalle-soli-pago-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/detalle-soli-pago-autoriz/detalle-soli-pago-autoriz.component.html
@@ -67,8 +67,8 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 <p class="info-sub-title supportBlack">
-                    <span><b>Monto máximo por pagar en esta factura:</b> $15.000.000</span>
-                    <span><b>Monto pendiente por pagar en la fase:</b> $30.000.000</span>
+                    <span><b>Monto pendiente por facturar:</b> $15.000.000</span>
+                    <!-- <span><b>Monto pendiente por facturar en la fase:</b> $30.000.000</span> -->
                 </p>
                 <p><b>Criterio de pago:</b> Estudios y diseños interventoria hasta 90%, Criterio 3</p>
                 <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
