--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex justify-content-center" *ngIf="montoMaximoPendiente !== undefined">
     <div>
-      <p> <b> Monto máximo por pagar en esta factura: </b> {{ montoMaximoPendiente.montoMaximo | currency: '':'symbol-naroow':'0.0-0' }} </p>
+      <p> <b> Monto pendiente por facturar: </b> {{ montoMaximoPendiente.montoMaximo | currency: '':'symbol-naroow':'0.0-0' }} </p>
     </div>
-    <div>
-      <p> <b> Monto pendiente por pagar en la fase: </b> {{ montoMaximoPendiente.valorPendientePorPagar | currency: '':'symbol-naroow':'0.0-0' }} </p>
-    </div>
+    <!-- <div>
+      <p> <b> Monto pendiente por facturar en la fase: </b> {{ montoMaximoPendiente.valorPendientePorPagar | currency: '':'symbol-naroow':'0.0-0' }} </p>
+    </div> -->
 </div>
 
 <div class="d-flex justify-content-center" *ngIf="criteriosSeleccionadosArray.length > 0">
