--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-registrar-avance-semanal/tabla-registrar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-registrar-avance-semanal/tabla-registrar-avance-semanal.component.html
@@ -73,9 +73,9 @@
                 color="accent"
                 class="btn-table"
                 (click)="enviarVerificacion( element.seguimientoSemanalId )"
-                *ngIf="element.enviarVerificacion === true && element?.cumpleCondicionesTai === false"
+                *ngIf="element.enviarVerificacion === true && element?.cumpleCondicionesTai === false &&  element.numeroSemana  "
                 [disabled]="permisos.tienePermisoEditar === false">
-                {{ element.numeroSemana !== element.cantidadSemanas && element.actaCargada === false ? 'Enviar a verificación' : 'Enviar para registrar informe final' }}
+                {{ element.numeroSemana !== element.cantidadSemanas && element.actaCargada === false ?'Enviar a verificación' : 'Enviar para registrar informe final' }}
         </button>
         <button mat-raised-button
                 color="accent"
