--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex justify-content-center" *ngIf="montoMaximoPendiente !== undefined">
     <div>
-      <p> <b> Monto máximo por pagar en esta factura: </b> {{ montoMaximoPendiente.montoMaximo | currency: '':'symbol-naroow':'0.0-0' }} </p>
+      <p> <b> Monto pendiente por facturar: </b> {{ montoMaximoPendiente.montoMaximo | currency: '':'symbol-naroow':'0.0-0' }} </p>
     </div>
-    <div>
-      <p> <b> Monto pendiente por pagar en la fase: </b> {{ montoMaximoPendiente.valorPendientePorPagar | currency: '':'symbol-naroow':'0.0-0' }} </p>
-    </div>
+    <!-- <div>
+      <p> <b> Monto pendiente por facturar en la fase: </b> {{ montoMaximoPendiente.valorPendientePorPagar | currency: '':'symbol-naroow':'0.0-0' }} </p>
+    </div> -->
 </div>
 
 <div class="d-flex justify-content-center" *ngIf="criteriosSeleccionadosArray.length > 0">
@@ -21,12 +21,12 @@
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content style="text-align: left;">
-                    <p style="margin-bottom: 2em;"><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
-                    <div style="margin-top: 2em;" *ngFor="let concepto of getConceptos( j ).controls">
-                        <p style="font-size: 16px;"><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
+                    <p><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
+                    <div *ngFor="let concepto of getConceptos( j ).controls">
+                        <p><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
                         <p><b>Valor facturado al concepto:</b> ${{ concepto.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
                     </div>
-                    <p style="margin-top: 2em;"><strong style="font-size: 16px;">Valor total de los conceptos:</strong> ${{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                    <p><strong>Valor total de los conceptos:</strong> ${{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
                 </mat-card-content>
             </mat-card>
         </div>
