--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-infofrecursos-gbftrec/tabla-infofrecursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-infofrecursos-gbftrec/tabla-infofrecursos-gbftrec.component.html
@@ -15,7 +15,7 @@
             </td>
         </ng-container>
         <ng-container matColumnDef="saldoValorFacturado">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo fuente de recursos afectado por el valor facturado </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo fuente de recursos afectado por ordenado a girar </th>
             <td mat-cell *matCellDef="let element" align="center">
                 {{ element.saldoAfectado | currency:'':'symbol-narrow':'.0-0' }}
             </td>
