--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-inforecursos-rlc/tabla-inforecursos-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-inforecursos-rlc/tabla-inforecursos-rlc.component.html
@@ -13,7 +13,7 @@
             <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoActualFRecursos }} </td>
         </ng-container>
         <ng-container matColumnDef="saldoAfectado">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo fuente de recursos afectado por el valor facturado </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo fuente de recursos afectado por ordenado a girar </th>
             <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoAfectado }} </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
