--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-info-fuenterec-gog/tabla-info-fuenterec-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-info-fuenterec-gog/tabla-info-fuenterec-gog.component.html
@@ -15,7 +15,7 @@
           </td>
       </ng-container>
       <ng-container matColumnDef="saldoAfectado">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo fuente de recursos afectado por el valor facturado </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo fuente de recursos afectado por ordenado a girar </th>
           <td mat-cell *matCellDef="let element" align="center">
               {{ element.saldoAfectado }}
           </td>
