--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/detalle-giro/detalle-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/detalle-giro/detalle-giro.component.html
@@ -78,7 +78,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="saldoValorFacturado">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Saldo fuente de recursos afectado por el valor facturado </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Saldo fuente de recursos afectado por ordenado a girar </th>
                     <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoAfectado | currency: '':'symbol-narrow':'.0-0' }} </td>
                 </ng-container>
             
