--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/plantilla/plantilla.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/plantilla/plantilla.component.html
@@ -144,8 +144,8 @@
           <td style="border: solid 1px #000;">{{ solicitudPago.contratoSon.contratacion.contratista.nombre }}</td>
 
           <td style="border: solid 1px #000">{{ solicitudPago.solicitudPagoFactura[0].numero }}</td>
-          <td style="border: solid 1px #000">Criterio de Pago</td>
-          <td style="border: solid 1px #000">Concepto de pago</td>
+          <td style="border: solid 1px #000">{{ getConceptos(solicitudPago.contratoSon.solicitudPagoOnly.solicitudPagoRegistrarSolicitudPago[0].solicitudPagoFase[0].solicitudPagoFaseCriterio[0].solicitudPagoFaseCriterioConceptoPago[0].conceptoPagoCriterio) }}</td>
+          <td style="border: solid 1px #000">{{ solicitudPago.contratoSon.solicitudPagoOnly.solicitudPagoRegistrarSolicitudPago[0].solicitudPagoFase[0].solicitudPagoFaseCriterio[0].solicitudPagoFaseCriterioConceptoPago[0].valorFacturadoConcepto | currency:'':'symbol-narrow':'.0-0' }}</td>
         </tr>
         <!-- <tr>
           <td style="border: solid 1px #000; height: 21px"></td>
@@ -189,7 +189,7 @@
         </tr> -->
         <tr>
           <td style="border: solid 1px #000" colspan="10">FIRMAS AUTORIZADAS</td>
-          <td style="border: solid 1px #000">SUMA</td>
+          <td style="border: solid 1px #000">{{ solicitudPago.contratoSon.solicitudPagoOnly.solicitudPagoRegistrarSolicitudPago[0].solicitudPagoFase[0].solicitudPagoFaseCriterio[0].solicitudPagoFaseCriterioConceptoPago[0].valorFacturadoConcepto | currency:'':'symbol-narrow':'.0-0' }}</td>
         </tr>
       </tbody>
     </table>
@@ -213,19 +213,19 @@
           </td>
           <td style="border: solid 1px #000; background-color: #deeaf6; font-weight: 700">OTROS DESCUENTOS</td>
         </tr>
+          <tr *ngFor="let data of infoPlantilla">
+            <td style="border: solid 1px #000" >{{ data[2] ? data[2].valorDescuento : 0 + data[1].valorDescuento + data[0].valorDescuento | currency:'':'symbol-narrow':'.0-0' }}</td>
+            <td style="border: solid 1px #000" >{{ data[0].valorDescuento | currency:'':'symbol-narrow':'.0-0' }}</td>
+            <td style="border: solid 1px #000" >{{ data[1].valorDescuento | currency:'':'symbol-narrow':'.0-0' }}</td>
+            <td style="border: solid 1px #000" >{{ data[2] ? data[2].valorDescuento : '' | currency:'':'symbol-narrow':'.0-0' }}</td>
+            <td style="border: solid 1px #000" >{{ solicitudPago.ordenGiro.valorNetoGiro | currency:'':'symbol-narrow':'.0-0' }}</td>
+          </tr>
         <tr>
-          <td style="border: solid 1px #000" *ngIf="this.infoPlantilla[0] != false">{{ this.infoPlantilla[0][2].valorDescuento + this.infoPlantilla[0][1].valorDescuento + this.infoPlantilla[0][0].valorDescuento }}</td>
-          <td style="border: solid 1px #000" *ngIf="this.infoPlantilla[0] != false">{{ this.infoPlantilla[0][2].valorDescuento }}</td>
-          <td style="border: solid 1px #000" *ngIf="this.infoPlantilla[0] != false">{{ this.infoPlantilla[0][1].valorDescuento }}</td>
-          <td style="border: solid 1px #000" *ngIf="this.infoPlantilla[0] != false">{{ this.infoPlantilla[0][0].valorDescuento }}</td>
-          <td style="border: solid 1px #000" *ngIf="this.infoPlantilla[0] != false">{{ solicitudPago.ordenGiro.valorNetoGiro }}</td>
-        </tr>
-        <tr>
-          <td style="border: solid 1px #000" *ngIf="this.infoPlantilla[0] != false">{{ this.infoPlantilla[0][2].valorDescuento + this.infoPlantilla[0][1].valorDescuento + this.infoPlantilla[0][0].valorDescuento }}</td>
-          <td style="border: solid 1px #000" *ngIf="this.infoPlantilla[0] != false">{{ this.infoPlantilla[0][2].valorDescuento }}</td>
-          <td style="border: solid 1px #000" *ngIf="this.infoPlantilla[0] != false">{{ this.infoPlantilla[0][1].valorDescuento }}</td>
-          <td style="border: solid 1px #000" *ngIf="this.infoPlantilla[0] != false">{{ this.infoPlantilla[0][0].valorDescuento }}</td>
-          <td style="border: solid 1px #000" *ngIf="this.infoPlantilla[0] != false">{{ solicitudPago.ordenGiro.valorNetoGiro }}</td>
+          <td style="border: solid 1px #000" *ngIf="infoPlantilla && infoPlantilla[0] != false">{{ infoPlantilla[0][2] ? infoPlantilla[0][2].valorDescuento : 0 + infoPlantilla[0][1].valorDescuento + infoPlantilla[0][0].valorDescuento | currency:'':'symbol-narrow':'.0-0' }}</td>
+          <td style="border: solid 1px #000" *ngIf="infoPlantilla && infoPlantilla[0] != false">{{ infoPlantilla[0][0].valorDescuento | currency:'':'symbol-narrow':'.0-0' }}</td>
+          <td style="border: solid 1px #000" *ngIf="infoPlantilla && infoPlantilla[0] != false">{{ infoPlantilla[0][1].valorDescuento | currency:'':'symbol-narrow':'.0-0' }}</td>
+          <td style="border: solid 1px #000" *ngIf="infoPlantilla && infoPlantilla[0] != false">{{ infoPlantilla[0][2] ? infoPlantilla[0][2].valorDescuento : '' | currency:'':'symbol-narrow':'.0-0' }}</td>
+          <td style="border: solid 1px #000" *ngIf="infoPlantilla && infoPlantilla[0] != false">{{ solicitudPago.ordenGiro.valorNetoGiro | currency:'':'symbol-narrow':'.0-0' }}</td>
         </tr>
         <!-- <tr>
           <td style="border: solid 1px #000">
