--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
@@ -1,9 +1,9 @@
 <div class="d-flex justify-content-center" *ngIf="montoMaximoPendiente !== undefined">
     <div>
-      <p> <b> Monto pendiente por facturar: </b> {{ montoMaximoPendiente.montoMaximo | currency: '':'symbol-naroow':'0.0-0' }} </p>
+      <p> <b> Monto pendiente por facturar: </b> {{ montoMaximoPendiente.montoMaximo | currency: '': 'symbol-narrow':'.0-0' }} </p>
     </div>
     <!-- <div>
-      <p> <b> Monto pendiente por facturar en la fase: </b> {{ montoMaximoPendiente.valorPendientePorPagar | currency: '':'symbol-naroow':'0.0-0' }} </p>
+      <p> <b> Monto pendiente por facturar en la fase: </b> {{ montoMaximoPendiente.valorPendientePorPagar | currency: '': 'symbol-narrow':'.0-0' }} </p>
     </div> -->
 </div>
 
